# app-car-management

./: .gitignore  README  package-lock.json  package.json  turbo.json
apps/backend/: .env  AUTHENTICATION_GUIDE.md  CORS_SETUP_GUIDE.md  DECORATOR_AUTH_GUIDE.md  Makefile  alembic.ini  pyproject.toml  tmpclaude-a991-cwd
apps/backend/app/src/: main.py  routers.py
apps/backend/app/src/core/: auth.py  config.py  exceptions.py  file_uploader.py  middleware.py  security.py  websocket_manager.py
apps/backend/app/src/db/: database.py  session.py
apps/backend/app/src/models/: __init__.py  messages.py  notification.py  services.py  user.py  vehicle.py  workshop.py  workshop_client.py
apps/backend/app/src/repositories/: messages.py  notifications.py  services.py  user.py  vehicle.py  workshop.py  workshop_client.py
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 0714974a1b44_create_messages_schema.py  0e9e9b09975d_updated_users_table.py  16c1f9c79e22_initial_multi_tenant_schema.py  18ced76dc2e8_initial_multi_tenant_schema.py  2521ce3a30e6_add_chat_messages.py  37348c638fee_update_database_from_remote_repo.py  48b26b02a31f_add_user_id_to_workshops.py  502c1c07656d_create_services_table.py  53e9661ef987_create_services_table.py  5669de9469e0_create_workshops_table.py  66431ae25b33_update_users_table_vehicle_relationship.py  8b05aa7fccc2_initial_migration.py  9765f0567c34_add_notifications_table.py  a1b2c3d4e5f6_add_workshop_clients_table_and_service_link.py  a793476e1b59_update_users_table_vehicle_relationship.py  d088ce143de7_create_workshops_table.py
(+104 files in other folders)
